# pcomb

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  calc.cc
include/: BasicParser.h  Combinator.h  ParserTypes.h  StringRef.h  pcomb.h
include/Combinator/: AltParser.h  EnsembleParser.h  LazyParser.h  LexemeParser.h  ManyParser.h  ParserAdapter.h  SeqParser.h  TokenParser.h
include/InputStream/: InputStream.h  PositionedInputStream.h  StringInputStream.h
include/Parser/: ParseResult.h  Parser.h  PredicateCharParser.h  RegexParser.h  StringParser.h
include/Type/: CallableConcept.h  InputStreamConcept.h  MoreGeneralType.h  ParseResult.h  ParserConcept.h
lib/: CMakeLists.txt
lib/Parser/: BasicParser.cc  Combinator.cc
lib/StringRef/: StringRef.cc
unit-test/: CMakeLists.txt
unit-test/UnitTest/: UnitTest.cc
